# Stylus-Hardware-Anchor

./: .env.example  .gitignore  PROGRESS.md  README.md  SETUP_GUIDE.md  generate_test_receipt.py  nexus_verifier.py  requirements.txt  ver_schema.md
.github/workflows/: ci.yml
.qoder/specs/: sha-keccak-comprehensive-fixes.md
docs/: ARCHITECTURE.md  CAST_CHEATSHEET.md  CHANGELOG_SHA_KECCAK_FIXES.md  DEBUGGING_POSTMORTEM.md  DEPLOYMENT_GUIDE.md  ESP32_FLASH_SAFETY.md  MILESTONE_1.md  SHA_KECCAK_COMPREHENSIVE_FIXES_PLAN.md  TECHNICAL_CHALLENGES.md
docs/zkp/: ARCHITECTURE.md  CIRCUIT_SPEC.md  INTEGRATION.md  README.md  README_ZKP.md  WINDSURF_COMMANDS.md  WINDSURF_EXECUTE.md  ZK_ROADMAP.md  main_branch_diff.md
middleware/: anchor_middleware.py  nexus_middleware.py
nexus_brain/: main.py
oap_witness/: Cargo.toml
oap_witness/src/: main.rs
ohr_firmware/: CMakeLists.txt  platformio.ini
ohr_firmware/main/: CMakeLists.txt  anchor_ohr.cpp  nexus_ohr.cpp  options.h  tiny-keccak.c
ohr_firmware/src/: main.cpp  options.h  tiny-keccak.c
scripts/: authorize_hardware.py  benchmark_receipts.py  run_gas_benchmarks.py  test_contract.py
stylus_anchor/: Cargo.toml
stylus_anchor/nexus_anchor/: .gitignore  Cargo.toml
stylus_anchor/nexus_anchor/src/: lib.rs
stylus_anchor/src/: lib.rs  main.rs
stylus_anchor/stylus_hardware_anchor/: .gitignore  Cargo.toml
stylus_anchor/stylus_hardware_anchor/.cargo/: audit.toml
stylus_anchor/stylus_hardware_anchor/src/: lib.rs  main.rs
zkp/: WINDSURF_COMMANDS.mdZone.Identifier  WINDSURF_EXECUTE.mdZone.Identifier
(+15 files in other folders)
