[package]
name = "stylus_anchor"
version = "1.0.0"
edition = "2021"
resolver = "2"

[dependencies]
stylus-sdk = "0.10.0"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

