[package]
name = "nexus_anchor"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "=0.6.0"

[patch.crates-io]
ruint = { git = "https://github.com/recmo/uint", tag = "v1.12.3" }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
