[package]
name = "stylus-hardware-anchor"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
stylus-sdk = "0.6.0"
ruint = "=1.12.3"
alloy-primitives = "=0.7.6"
alloy-sol-types = "=0.7.6"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "stylus-hardware-anchor"
path = "src/main.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
